# TurbulenceRemoval

./: CMakeLists.txt  README.md  TurbulenceRemoval.cpp  TurbulenceRemoval.h  TurbulenceRemoval.sln  main.cpp
TurbulenceRemoval/: TurbulenceRemoval.cpp  TurbulenceRemoval.h  TurbulenceRemoval.vcxproj  TurbulenceRemoval.vcxproj.filters  main.cpp
TurbulenceRemoval/VideoSamples/: test1.avi  test2.avi  test3.avi  test4.avi  test5.avi
cmake/: target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
samples/: test2.avi
